reflect-demo/src/tests/snapshots/reflect_demo__tests__basic__reflect_struct_option_output.snap
---
source: reflect-demo/src/tests/basic.rs
expression: "TestStructOption::reflect_output()"
---
[
  {
    "name": "reflect_demo::tests::basic::TestStructOption"
  },
  {
    "name": "",
    "types": [
      {
        "kind": "struct",
        "name": "reflect_demo::tests::basic::TestStructOption",
        "fields": [
          {
            "name": "_f",
            "type": {
              "name": "std::option::Option",
              "parameters": [
                {
                  "name": "u8"
                }
              ]
            },
            "required": true
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::option::Option",
        "description": "Optional / Nullable value type",
        "parameters": [
          {
            "name": "T"
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  }
]
