reflect-demo/src/tests/snapshots/reflect_demo__tests__basic__reflect_struct_tuple_input.snap
---
source: reflect-demo/src/tests/basic.rs
expression: "TestStructTuple::reflect_input()"
---
[
  {
    "name": "reflect_demo::tests::basic::TestStructTuple"
  },
  {
    "types": [
      {
        "kind": "struct",
        "name": "reflect_demo::tests::basic::TestStructTuple",
        "fields": [
          {
            "name": "0",
            "type": {
              "name": "u8"
            },
            "required": true
          },
          {
            "name": "1",
            "type": {
              "name": "std::string::String"
            },
            "required": true
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  }
]
