reflect-demo/src/tests/snapshots/reflect_demo__tests__basic__reflect_struct_tuple_output.snap
---
source: reflect-demo/src/tests/basic.rs
expression: "TestStructTuple::reflect_output()"
---
[
  {
    "name": "reflect_demo::tests::basic::TestStructTuple"
  },
  {
    "name": "",
    "types": [
      {
        "kind": "struct",
        "name": "reflect_demo::tests::basic::TestStructTuple",
        "fields": [
          {
            "name": "0",
            "type": {
              "name": "u8"
            }
          },
          {
            "name": "1",
            "type": {
              "name": "std::string::String"
            }
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  }
]
