reflect-demo/src/tests/snapshots/reflect_demo__tests__basic__reflect_struct_unit_type.snap
---
source: reflect-demo/src/tests/basic.rs
expression: "super::into_schema::<TestStructUnitType>()"
---
{
  "name": "",
  "functions": [
    {
      "name": "",
      "input_type": {
        "name": "reflect_demo::tests::basic::TestStructUnitType"
      },
      "output_type": {
        "name": "reflect_demo::tests::basic::TestStructUnitType"
      },
      "serialization": [
        "json"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "primitive",
        "name": "()",
        "description": "Unit type"
      },
      {
        "kind": "struct",
        "name": "reflect::Empty",
        "description": "Struct object with no fields"
      },
      {
        "kind": "struct",
        "name": "reflect_demo::tests::basic::TestStructUnitType",
        "fields": [
          {
            "name": "0",
            "type": {
              "name": "()"
            }
          }
        ]
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "primitive",
        "name": "()",
        "description": "Unit type"
      },
      {
        "kind": "struct",
        "name": "reflect::Infallible",
        "description": "Error object which is expected to be never returned"
      },
      {
        "kind": "struct",
        "name": "reflect_demo::tests::basic::TestStructUnitType",
        "fields": [
          {
            "name": "0",
            "type": {
              "name": "()"
            }
          }
        ]
      }
    ]
  }
}
